# beggar_socket

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/skills/code-review/: SKILL.md
.github/workflows/: build-electron.yml  build-mcu.yml  build-tauri.yml  build-webclient.yml
client/: ChisFlashBurner.sln  更新卡带时钟 测试 不保证能用.py
client/ChisFlashBurner/: ChisFlashBurner.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Form_gba_rtc.Designer.cs  Form_gba_rtc.cs  Form_mbc3_rtc.Designer.cs  Form_mbc3_rtc.cs  Program.cs  cart_adapter.cs  mission_gba.cs  mission_mbc5.cs  mission_tools.cs  utility.cs
client/ChisFlashBurner/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
docs/: RAM-UPLOAD-WORKFLOW.md  RAM-分析总结.md  STM32F103C8T6-RAM-ANALYSIS.md  mcu-firmware-wiki.md  mcu-virtual-fat16-disk-design.md  mcu-virtual-fat16-roadmap.md
mcu/: .clang-format  AGENTS.md  arm-cortex-m.cmake  build.sh  cmake-build.ps1  cmake-build.sh  debug-iap.sh  debug-pc.sh  debug-usb-jump.sh  debug-usb.sh  format-code.sh  ram-test.sh
mcu/.metadata/: .log4j2.xml  version.ini
mcu/chis_flash_burner/: .clang-format  .cproject  .mxproject  .project  CMakeLists.txt  Makefile  STM32F103C8TX_FLASH_APP.ld  STM32F103C8TX_FLASH_IAP.ld  chis_flash_burner Debug.launch  chis_flash_burner.ioc
mcu/chis_flash_burner/Core/Inc/: act_led.h  bootloader.h  cart_adapter.h  cart_service.h  error_handler.h  fat16_layout.h  iap.h  main.h  modbus_crc.h  morse_code.h  uart.h  version.h  virtual_disk.h
mcu/chis_flash_burner/Core/Src/: act_led.c  bootloader.c  cart_adapter.c  cart_adapter.h  cart_service.c  error_handler.c  fat16_layout.c  iap.c  main.c  modbus_crc.c  stm32f1xx_hal_msp.c  system_stm32f1xx.c  uart.c  uart.h  uart_bootloader.c  version.c  virtual_disk.c
mcu/chis_flash_burner/Core/Src/bootloader/: bootloader.c  morse_code.c  uart_bootloader.c
mcu/chis_flash_burner/Debug/: chis_flash_burner.elf  chis_flash_burner.hex  chis_flash_burner.list  chis_flash_burner.map  makefile  objects.list
mcu/chis_flash_burner/Debug/Core/Src/: cart_adapter.cyclo  cart_adapter.d  cart_adapter.su  main.cyclo  main.d  main.su  subdir.mk  uart.cyclo  uart.d  uart.su
mcu/chis_flash_burner/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
mcu/chis_flash_burner/Debug/USB_DEVICE/App/: usbd_cdc_if.cyclo  usbd_cdc_if.d  usbd_cdc_if.su
mcu/chis_flash_burner/Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc.c  usbd_msc_bot.c  usbd_msc_scsi.c
mcu/chis_flash_burner/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_msc_scaffold.c  usbd_msc_scaffold.h
openspec/changes/adapter-template-method/: design.md  proposal.md  tasks.md
openspec/changes/emulator-base-component/: design.md  proposal.md  tasks.md
openspec/changes/fat16-read-only-virtual-disk/: design.md  proposal.md  tasks.md
openspec/changes/gba-multimenu-split/: proposal.md  tasks.md
openspec/changes/operation-panel-dedup/: design.md  proposal.md  tasks.md
openspec/changes/parameter-file-control-plane/: proposal.md
openspec/changes/parser-decomposition/: design.md  proposal.md  tasks.md
openspec/changes/protocol-platform-abstraction/: design.md  proposal.md  tasks.md
openspec/changes/ram-type-read-support-and-config-apply/: proposal.md  tasks.md
openspec/changes/ram-upload-and-commit/: proposal.md
openspec/changes/rom-streaming-program-window/: proposal.md
openspec/changes/settings-data-driven-refactor/: design.md  tasks.md
openspec/changes/shared-constants-extraction/: design.md  tasks.md
openspec/changes/web-client-cartburner-containerization/: design.md  tasks.md
openspec/changes/web-client-connection-usecase-orchestration/: design.md  tasks.md
stc/: stc_usb_ser.uvgui.linscon  stc_usb_ser.uvopt  stc_usb_ser.uvproj
stc/src/: STC8H.h  cart_adapter 24m.c  cart_adapter 44m.c  cart_adapter.c  cart_adapter.h  def.h  main.c  main.h  stc8h_def.h  uart.c  uart.h  uartstc.c  uartstc.h  uartstm.c  usb.c  usb.h  usb_desc.c  usb_req_class.c  usb_req_class.h  usb_req_std.c
web-client/: .env  .env.development  .env.production  .gitignore  .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
web-client/docs/: README.md  architecture-guardrails.md  phase-4-test-system-completion.md  web-client-module-current-state.md  web-client-module-refactor-plan.md  web-client-module-target-architecture.md  web-client-modules-docs-update-plan.md
web-client/electron/: ipc-handlers.js  main.js  package.json  preload.js  security-utils.js
web-client/public/: lk_multimenu_for_chisflash_01_02G.gba  system-notifications.json  virtual_rom.gba
web-client/scripts/: check-architecture-deps.cjs  check-i18n.cjs  run-tauri.mjs
web-client/src/: App.vue  main.ts  style.css  vite-env.d.ts
web-client/src-tauri/: Cargo.toml  tauri.conf.json
web-client/src-tauri/capabilities/: default.json
web-client/src-tauri/src/: lib.rs
web-client/tests/: App.test.ts  CRC16Performance.test.ts  DeviceConnect.test.ts  LanguageSwitcher.test.ts  ProgressDisplay.test.ts  advanced-settings.test.ts  architecture-serial-boundary.test.ts  async-utils.test.ts  burner-application.test.ts  burner-log-format.test.ts  burner-port-contract.test.ts  cartburner-container-state.test.ts  cartridge-adapter.test.ts  cfi-parser-improvements.test.ts  compression-utils.test.ts  connection-usecase-orchestration.test.ts  crc-utils.test.ts  debug-settings.test.ts  device-connect.test.ts  device-connection-manager.test.ts  device-gateway.test.ts  electron-security-utils.test.ts  error-mapping.test.ts  firmware-profile.test.ts  flash-detection.test.ts  formatter-utils.test.ts  gba-adapter.test.ts  gba-batteryless.test.ts  i18n.test.ts  imageUtils.test.ts  log-viewer-utils.test.ts  mbc-abstraction.test.ts  mbc5-adapter.test.ts  mutex.test.ts  operation-panel-contracts.test.ts  port-filter.test.ts  progress-builder.test.ts  progress-reporter.test.ts  protocol-transport.test.ts  rom-assembly-utils.test.ts  (+12 more)
(+469 files in other folders)
