[package]
name = "chisflash-burner"
version = "1.5.0"
description = "ChisFlash Burner desktop client powered by Tauri"
authors = ["tautcony <i@tautcony.xyz>"]
license = "MIT"
repository = "https://github.com/tautcony/beggar_socket"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-serialplugin = "2.22.0"
rfd = "0.15.4"
